public/css/gollum.css
#wiki-wrapper #template blockquote {
  margin: 1em 0;
  border-left: 4px solid #ddd;
  padding-left: .8em;
  color: #555;
}

/*
  gollum.css
  A basic stylesheet for Gollum
*/

/* @section core */
body, html {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 10px;
  margin: 0;
  padding: 0;
}

#wiki-wrapper {
  margin: 0 auto;
  overflow: visible;
  width: 80%;
}

a:link {
  color: #4183c4;
  text-decoration: none;
}

a:hover, a:visited {
  color: #4183c4;
  text-decoration: underline;
}


/* @section head */
#head {
  margin: 0 0 0.5em;
  padding: 0.5em 0;
  overflow: hidden;
}

  #head ul.actions {
    float: right;
  }

/* @section content */
#wiki-content {
  height: 1%;
  overflow: visible;
}

  #wiki-content .wrap {
    height: 1%;
    overflow: auto;
  }

  /* @section comments */
  #wiki-body #inline-comment {
    display: none; /* todo */
  }

  /* @section body */
  #wiki-body {
    display: block;
    margin-right: 3%;
    width: 100%;
  }

  .has-sidebar #wiki-body {
  }

  /* @section sidebar */
  #wiki-sidebar {
    background-color: #f7f7f7;
    border: 1px solid #ddd;
    font-size: 13px;
    float: right;
    padding: 7px;
    margin-left: 1em;

    border-radius: 0.5em;
    -moz-border-radius: 0.5em;
    -webkit-border-radius: 0.5em;
  }

    #wiki-sidebar p {
      margin: 13px 0 0;
    }

      #wiki-sidebarn > p:first-child {
        margin-top: 0;
      }

    #wiki-sidebar p.parent {
      border-bottom: 1px solid #bbb;
      font-weight: bold;
      margin: 0 0 0.5em 0;
      padding: 0 0 0.5em 0;
      text-shadow: 0 1px 0 #fff;
    }

    /* Back arrow */
    #wiki-sidebar p.parent:before {
      color: #666;
      content: "← ";
    }

    #wiki-sidebar h3 {
      font-size: 1.2em;
      color: #333;
      margin: 1.2em 0 0;
      padding: 0;
      text-shadow: 0 1px 0 #fff;
    }

    #wiki-sidebar ul {
      margin: 0.5em 0 1em;
      padding: 0;
    }

      #wiki-sidebar ul ul {
        margin: 0;
      }

    #wiki-sidebar ul li {
      color: #bbb;
      margin: 0 0 0 1em;
      padding: 0;
      line-height: 1.75em;
      list-style-position: inside;
      list-style-type: round;
    }

    #wiki-sidebar #nav ul li a {
      font-weight: bold;
      text-shadow: 0 1px 0 #fff;
    }

  /* @section footer */
  #wiki-footer {
    clear: both;
    margin: 2em 0 5em;
  }

    .has-sidebar #wiki-footer {
    }

    #wiki-footer #footer-content {
      background-color: #f7f7f7;
      border: 1px solid #ddd;
      font-size: 1.2em;
      line-height: 1.5em;
      margin-top: 1.5em;
      padding: 1em;

      border-radius: 0.5em;
      -moz-border-radius: 0.5em;
      -webkit-border-radius: 0.5em;
    }

    #wiki-footer #footer-content h3 {
      font-size: 1.2em;
      color: #333;
      margin: 0;
      padding: 0 0 0.2em;
      text-shadow: 0 1px 0 #fff;
    }

    #wiki-footer #footer-content p {
      margin: 0.5em 0 0;
      padding: 0;
    }

    #wiki-footer #footer-content ul.links {
      margin: 0.5em 0 0;
      overflow: hidden;
      padding: 0;
    }

    #wiki-footer #footer-content ul.links li {
      color: #999;
      float: left;
      list-style-position: inside;
      list-style-type: square;
      padding: 0;
      margin-left: 0.75em;
    }

    #wiki-footer #footer-content ul.links li a {
      font-weight: bold;
      text-shadow: 0 1px 0 #fff;
    }

    #wiki-footer #footer-content ul.links li:first-child {
      list-style-type: none;
      margin: 0;
    }

    .ff #wiki-footer #footer-content ul.links li:first-child {
      margin: 0 -0.75em 0 0;
    }

  /* @section page-footer */
  .page #footer {
    margin: 1em 0 7em;
  }

  #footer p#last-edit {
    font-size: .9em;
    line-height: 1.6em;
    color: #999;
    margin: 0.9em 0;
  }

    #footer p#last-edit span.username {
      font-weight: bold;
    }


/* @section history */
.history h1 {
  color: #999;
  font-weight: normal;
}

  .history h1 strong {
    color: #000;
    font-weight: bold;
  }

#wiki-history {
  margin-top: 3em;
}

  #wiki-history fieldset {
    border: 0;
    margin: 2em 0;
    padding: 0;
  }

  #wiki-history table, #wiki-history tbody {
    border-collapse: collapse;
    padding: 0;
    margin: 0;
    width: 100%;
  }

  #wiki-history table tr {
    padding: 0;
    margin: 0;
  }

  #wiki-history table tr {
    background-color: #ebf2f6;
  }

  #wiki-history table tr td {
    border: 1px solid #c0dce9;
    font-size: 1.2em;
    line-height: 1.6em;
    margin: 0;
    padding: 0.3em 0.7em;
  }

  #wiki-history table tr td.checkbox {
    min-width: 2em;
    padding: 0.3em;
  }

  #wiki-history table tr td.checkbox input {
    cursor: pointer;
    display: block;
    padding-right: 0;
    padding-top: 0.4em;
    margin-right: -0.2em;
  }

  #wiki-history table tr:nth-child(2n),
  #wiki-history table tr.alt-row {
    background-color: #f3f7fa;
  }

  #wiki-history table tr.selected {
    background-color: #ffffea !important;
    z-index: 100;
  }

  #wiki-history table tr td.commit-name {
    border-left: 0;
  }

  #wiki-history table tr td.commit-name span.time-elapsed {
    color: #999;
  }

  #wiki-history table tr td.author {
    width: 20%;
  }

  #wiki-history table tr td.author a {
    color: #000;
    font-weight: bold;
  }

  #wiki-history table tr td.author a span.username {
    display: block;
    padding-top: 3px;
  }

  #wiki-history table tr td img {
    background-color: #fff;
    border: 1px solid #999;
    display: block;
    float: left;
    height: 18px;
    overflow: hidden;
    margin: 0 0.5em 0 0;
    width: 18px;
    padding: 2px;
  }

  #wiki-history table tr td.commit-name a {
    font-size: 0.9em;
    font-family: 'Monaco', 'Andale Mono', Consolas, 'Courier New', monospace;
    padding: 0 0.2em;
  }

.history #wiki-history ul.actions li,
.history #footer ul.actions li {
  margin: 0 0.6em 0 0;
}


/* @section edit */
.edit h1 {
  color: #999;
  font-weight: normal;
}
/* ... */

